--- a/MyProfile.xaml
+++ b/MyProfile.xaml
@@ -14,13 +14,72 @@
                 <RowDefinition Height="7*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Text="Личный кабинет" Style="{StaticResource TextBlockInfo}" FontSize="25"
-                       Foreground="#18bc84" Margin="0 10 0 0"/>
 
-            <StackPanel Orientation="Vertical" Grid.Row="1">
-                <TextBlock Text="{Binding Username}" Style="{StaticResource TextBlockInfo}" HorizontalAlignment="Center" Margin="10 10 0 0"
-                           FontSize="20"/>
-            </StackPanel>
+            <TextBlock Text="{Binding Username}" Style="{StaticResource TextBlockInfo}" Margin="10 0 0 0"
+                       FontSize="25" HorizontalAlignment="Left" Foreground="#18bc84" FontWeight="ExtraBold"/>
+
+            <Grid ShowGridLines="True" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+
+                <StackPanel Orientation="Vertical" Grid.Row="1" Margin="10" Grid.Column="0">
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="E-mail: " Style="{StaticResource TextBlockInfo}" FontSize="18" Margin=" 0 0 0 10" FontWeight="ExtraBold"/>
+                        <TextBlock Text="{Binding Email}" Style="{StaticResource TextBlockInfo}" FontSize="18" FontStyle="Italic" FontWeight="Light"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Номер телефона: " Style="{StaticResource TextBlockInfo}" FontSize="18"  Margin=" 0 0 0 10"  FontWeight="ExtraBold"/>
+                        <TextBlock Text="{Binding Phonenumber}" Style="{StaticResource TextBlockInfo}" FontSize="18"  Margin=" 0 0 0 10" FontStyle="Italic" FontWeight="Light"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Дата рождения: " Style="{StaticResource TextBlockInfo}" FontSize="18"  FontWeight="ExtraBold"/>
+                        <TextBlock Text="{Binding Birthdate}" Style="{StaticResource TextBlockInfo}" FontSize="18"  Margin=" 0 0 0 10" FontStyle="Italic" FontWeight="Light"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Пол: " Style="{StaticResource TextBlockInfo}" FontSize="18"  FontWeight="ExtraBold"/>
+                        <TextBlock Text="{Binding Gender}" Style="{StaticResource TextBlockInfo}" FontSize="18"  Margin=" 0 0 0 10" FontStyle="Italic" FontWeight="Light"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Снилс: " Style="{StaticResource TextBlockInfo}" FontSize="18"  FontWeight="ExtraBold" />
+                        <TextBlock Text="{Binding Snils}" Style="{StaticResource TextBlockInfo}" FontSize="18"  Margin=" 0 0 0 10" FontStyle="Italic" FontWeight="Light"/>
+                    </StackPanel>
+                </StackPanel>
+
+
+                <Grid Grid.Row="1" Grid.Column="1" ShowGridLines="True">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+
+                    <StackPanel Grid.Column="0" Orientation="Vertical">
+                        <TextBlock Text="Изменение пароля"  Style="{StaticResource TextBlockInfo}" FontSize="20" Margin="0 10 0 0"/>
+
+                        <TextBlock Text="Введите новый пароль" FontSize="15" Margin="20 20 0 0"  HorizontalAlignment="Left" Style="{StaticResource TextBlockInfo}"/>
+                        <PasswordBox Margin="20 0 20 0" x:Name="NewPassword"/>
+
+                        <TextBlock Text="Повторите пароль" FontSize="15" Margin="20 20 0 0"  HorizontalAlignment="Left" Style="{StaticResource TextBlockInfo}"/>
+                        <PasswordBox Margin="20 0 20 0" x:Name="RepeatPassword"/>
+
+                        <Button Content="Применить" Click="UpdatePassword_ButtonClick"
+                                Background="#18bc84" Foreground="White" Margin="20 30 20 20" Height="30" FontWeight="Bold"/>
+                    </StackPanel>
+                    
+                </Grid>
+            </Grid>
+
+
+
+
         </Grid>
     </Border>
 </UserControl>
