--- a/UserAppointmentsList.xaml
+++ b/UserAppointmentsList.xaml
@@ -21,13 +21,13 @@
 
             <StackPanel Grid.Row="1" Orientation="Horizontal">
                 <Button Content="Все посещения" Style="{StaticResource ButtonText}" FontSize="15" Margin="20 0 0 0"
-                        BorderBrush="Transparent"/>
+                        BorderBrush="Transparent" Click="AllAppointments_ButtonClick"/>
 
                 <Button Content="Предстоящие" Style="{StaticResource ButtonText}" FontSize="15" Margin="20 0 0 0"
-                        BorderBrush="Transparent"/>
+                        BorderBrush="Transparent" Click="UpcomingAppointments_ButtonClick"/>
 
                 <Button Content="Завершенные" Style="{StaticResource ButtonText}" FontSize="15" Margin="20 0 0 0"
-                        BorderBrush="Transparent"/>
+                        BorderBrush="Transparent" Click="CompletedAppointments_ButtonClick"/>
             </StackPanel>
 
             <ListBox Grid.Row="2" Margin="10" ItemsSource="{Binding UserAppointmentsCollection}"
@@ -64,7 +64,10 @@
                                         <TextBlock Text="{Binding Doctor.Specialty}" Style="{StaticResource TextBlockInfo}"/>
                                     </StackPanel>
 
-                                    <!--Добавить еще статус посещения-->
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Статус: " Style="{StaticResource TextBlockInfo}"/>
+                                        <TextBlock Text="{Binding Appointmentstatus}" Style="{StaticResource TextBlockInfo}"/>
+                                    </StackPanel>
 
                                 </StackPanel>
 
