--- a/DoctorAppointment.xaml
+++ b/DoctorAppointment.xaml
@@ -7,9 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Background="#18181f">
-        <Grid ShowGridLines="True">
+        <Grid ShowGridLines="False">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="1.4*"/>
+                <RowDefinition Height="1.3*"/> <!--Тут будет сортировка по врачам-->
                 <RowDefinition Height="9*"/>
             </Grid.RowDefinitions>
 
@@ -19,6 +20,32 @@
                        Style="{StaticResource TextBlockInfo}"
                        FontSize="30"/>
             </StackPanel>
+
+            <ListBox ItemsSource="{Binding DoctorsList}" Grid.Row="2" Background="Transparent">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid ShowGridLines="True">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="150"/>
+                                <!-- Установка фиксированной ширины для каждого столбца -->
+                                <ColumnDefinition Width="150"/>
+                                <ColumnDefinition Width="150"/>
+                                <ColumnDefinition Width="150"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- Информация о враче -->
+                            <TextBlock Text="{Binding Name}" Style="{StaticResource TextBlockInfo}" Foreground="#18bc84"  Grid.Column="0" FontSize="15" Margin="0 0 10 0"/>
+                            <TextBlock Text="{Binding Specialty}" Style="{StaticResource TextBlockInfo}"  Grid.Column="1" FontSize="15" Margin="0 0 10 0"/>
+                            <TextBlock Text="{Binding Availabletime}" Style="{StaticResource TextBlockInfo}"  Grid.Column="2" FontSize="15" Margin="0 0 10 0"/>
+                            <Button Background="#18bc84" Content="ВЫБРАТЬ" Foreground="White" FontWeight="Bold" Grid.Column="3" Margin="10 0 0 0" HorizontalAlignment="Right"
+                                    Click="ChooseDoctorAndTime_ButtonClick"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <!-- Выбор врача и отображение доступных дат -->
+            <!--<ComboBox ItemsSource="{Binding SelectedDoctor.AvailableDates}" DisplayMemberPath="Date" Grid.Row="1"/>-->
         </Grid>
     </Border>
 </UserControl>
