--- a/MyProfile.xaml
+++ b/MyProfile.xaml
@@ -8,7 +8,7 @@
              Background="Transparent"
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Background="#18181f">
-        <Grid ShowGridLines="True">
+        <Grid ShowGridLines="False">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="7*"/>
@@ -18,7 +18,7 @@
             <TextBlock Text="{Binding Username}" Style="{StaticResource TextBlockInfo}" Margin="10 0 0 0"
                        FontSize="25" HorizontalAlignment="Left" Foreground="#18bc84" FontWeight="ExtraBold"/>
 
-            <Grid ShowGridLines="True" Grid.Row="1">
+            <Grid ShowGridLines="False" Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1.5*"/>
                     <ColumnDefinition Width="*"/>
@@ -53,8 +53,7 @@
                     </StackPanel>
                 </StackPanel>
 
-
-                <Grid Grid.Row="1" Grid.Column="1" ShowGridLines="True">
+                <Grid Grid.Row="1" Grid.Column="1" ShowGridLines="False">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="2*"/>
                         <RowDefinition Height="*"/>
