--- a/UserAppointmentsList.xaml
+++ b/UserAppointmentsList.xaml
@@ -7,8 +7,12 @@
              mc:Ignorable="d" 
              Background="Transparent"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <local:StatusToVisibilityConverter x:Key="StatusToVisibilityConverter"/>
+    </UserControl.Resources>
+    
     <Border Background="#18181f">
-        <Grid ShowGridLines="True">
+        <Grid ShowGridLines="False">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -31,7 +35,7 @@
             </StackPanel>
 
             <ListBox Grid.Row="2" Margin="10" ItemsSource="{Binding UserAppointmentsCollection}"
-         Background="Transparent">
+                     Background="Transparent">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
 
@@ -67,6 +71,11 @@
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Статус: " Style="{StaticResource TextBlockInfo}"/>
                                         <TextBlock Text="{Binding Appointmentstatus}" Style="{StaticResource TextBlockInfo}"/>
+                                    </StackPanel>
+
+                                    <StackPanel>
+                                        <Button Content="Отменить запись" Background="Transparent" FontSize="15" Foreground="Red" Margin="0 10 0 0" FontWeight="Bold"
+                                                Click="CancelAppointment_ButtonClick" Visibility="{Binding Appointmentstatus, Converter={StaticResource StatusToVisibilityConverter}}"/>
                                     </StackPanel>
 
                                 </StackPanel>
